# go/pkg/enum/matrixtypes.go
@@ -1,0 +1,10 @@
+package enum
+
+// MatrixType es el tipo de enum para los valores "Q", "R" y "Rotated"
+type MatrixType string
+
+const (
+	Q       MatrixType = "Q"
+	R       MatrixType = "R"
+	Rotated MatrixType = "Rotated"
+)
